--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
     <div class="certificate">
     <a href="images/certificate1.png" target="_blank">
-        <img src="images/certificate1.png" alt="certificate1">
+        <img src="certificate1.png" alt="certificate1">
       <h3>Python_for_Beginners_E-Certificate</h3>
     </a>
 </div>
